Updated route and app name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ig-rewind",
-  "homepage": "https://rikghosh487.github.io/instagram-rewind/",
+  "name": "ig-unreeled",
+  "homepage": "https://rikghosh487.github.io/ig-unreeled/",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
